--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <page4></page4> 
       <page5></page5>
       <page6></page6>
+      <page7></page7>
     </div>
     <script src="lib/easycmp.js"></script> 
     <script src="index.js"></script>
