--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <page5></page5>
       <page6></page6>
       <page7></page7>
+      <page8></page8>
+      <page9></page9>
     </div>
     <script src="lib/easycmp.js"></script> 
     <script src="index.js"></script>
