--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <page7></page7>
       <page8></page8>
       <page9></page9>
+      <page10></page10>
     </div>
     <script src="lib/easycmp.js"></script> 
     <script src="index.js"></script>
