--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <page8></page8>
       <page9></page9>
       <page10></page10>
+      <page11></page11>
+      <page12></page12>
     </div>
     <script src="lib/easycmp.js"></script> 
     <script src="index.js"></script>
